# qr-pleading-face

./: LICENSE  README.md  app.py  pyproject.toml
static/: main.css
templates/: index.html
